codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__image_generation_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"   gpt-5.6-sol default │  /tmp/project │ API key                              "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
